[gd_scene load_steps=4 format=3 uid="uid://8lxtk2ydjfjc"]

[ext_resource type="Script" uid="uid://bjq5dnih16fn7" path="res://player/weapons/projectiles/rpg_bullet.gd" id="1_otq2n"]
[ext_resource type="Texture2D" uid="uid://i6hn4qylrqqp" path="res://enemies/animations/virus_enemy/virus_enemy.svg" id="2_ea76y"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fpwlo"]
radius = 4.0

[node name="RPG" type="Node2D" groups=["Explosives", "Projectiles"]]
scale = Vector2(8.25, 8.25)
script = ExtResource("1_otq2n")

[node name="Sprite" type="Sprite2D" parent="."]
modulate = Color(0, 0.569465, 0.353702, 1)
self_modulate = Color(0, 0.77236, 0.322964, 1)
scale = Vector2(0.0466388, 0.0466388)
texture = ExtResource("2_ea76y")

[node name="LifeTime" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_fpwlo")

[connection signal="timeout" from="LifeTime" to="." method="_on_life_time_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
